[metadata]
name = roq-thraneh
version = 0.7.0
author = Hans Erik Thrane
author_email = thraneh@gmail.com
description = Roq Python Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roq-trading/roq-python/
project_urls =
    Bug Tracker = https://github.com/roq-trading/roq-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = simplefix

[options.packages.find]
where = src
